[CES-645] Add `GET task/{id}` (#59)
